--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,21 @@ input {
     user-select: none;
     margin: 0.75rem;
 }
+
+header {
+    display: flex;
+}
+
+i {
+    font-size: 2.5rem;
+    margin: 0 2vw 0 2vw;
+}
+
+header h1 {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    font-size: 3vw;
+    word-wrap: normal;
+}
